- Updated: youporn
- Fixed: video url
- Fixed: catcher
- Updated: boysfood
- Fixed video url
- Fixed category
- Fixed catcher
- Fixed Search


[B]Version 1.7.12[/B]

- Updated: eporner
- Fixed: catcher
- Fixed: video url
- Fixed: category


[B]Version 1.7.11[/B]

- Updated: timtube
- Fixed: catcher
- Fixed: video url


[B]Version 1.7.10[/B]

- Updated: redtube
- Fixed: catcher
- Fixed: category
- Fixed: next button
- Updated: youjizz
- Fixed: catcher


[B]Version 1.7.9[/B]

- Updated: pornotube
- Fixed: catcher


[B]Version 1.7.8[/B]

- Updated: moviesand
- Fixed: categories
- Updated: pornhub
- Fixed: catcher
- Updated: pornoxo
- Fixed: catcher
- Updated: pornotube
- Fixed: catcher
- Fixed: video listing


[B]Version 1.7.7[/B]

- Updated: keez
- Updated: mofosex
- Fixed: catcher
- Fixed: video listing


[B]Version 1.7.6[/B]

- Updated: fucktube
- Fixed: catcher


[B]Version 1.7.5[/B]

- Updated: extremetube
- Fixed: video listing
- Fixed: catcher


[B]Version 1.7.4[/B]

- Updated: xhamster
- Fixed: next button


[B]Version 1.7.3[/B]

- Updated: xhamster
- Fixed: catcher
- Fixed: video regex


[B]Version 1.7.2[/B]

- Updated: pornotube (catcher still broken)
- Fixed: search


[B]Version 1.7.1[/B]

- Added: madthumbs and pornoxo
- Added: readded shufuni and girlfriendvideos
- Updated: xhamster, redtube and youporn (categories)
- Updated: search (keep last search string in memory)
- Updated: striptoslash command


[B]Version 1.7.0[/B]

- Fixed: encoding problems for atv users (thx tiben20 and cipher_)
- Fixed: download problem
- Removed: girlfriendvideos
- Updated: youjizz, boysfood


[B]Version 1.6.9[/B]

- Updated: xhamster
- Added: youjizz


[B]Version 1.6.8[/B]

- Updated: tube8, moviesand, keezmovies
- Added: girlfriendvideos and eporner (thx tiben20)
- Added: readded mofosex


[B]Version 1.6.7[/B]

- Updated: cookies are saved to the userdata profile path now
- Added: description in addon.xml
- Added: disclaimer in addon.xml