@@ -192,7 +192,7 @@
 
 <addon
   id="plugin.video.videodevil"
-  version="1.7.12"
+  version="1.7.13"
   name="VideoDevil"
   provider-name="sfaxman / bootsy">
   <requires>
